--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="carbohydrates">Carbohydrates</string>
     <string name="salt">Salt</string>
     <string name="of_which_sugars">of which sugars</string>
+    <string name="home_fragment">Home fragment</string>
     <string-array name="activity_add_food_spinner_type">
         <item>Grains</item>
         <item>Vegetables</item>
