--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,14 +28,14 @@
     <string name="age">Age</string>
     <string name="height">Height</string>
     <string name="weight">Weight</string>
-    <string name="gender">Gender</string>
+    <string name="sex">Sex</string>
     <string name="lifestyle">Lifestyle</string>
     <string name="fitness_level">Fitness Level</string>
-    <string name="taking_medication">Taking Medication?</string>
+    <string name="taking_medication">Medication</string>
     <string name="yes">yes</string>
     <string name="no">no</string>
-    <string name="allergies_available">Allergies available?</string>
-    <string name="smoking">Smoking?</string>
+    <string name="allergies_available">Allergies</string>
+    <string name="smoking">Smoking</string>
     <string name="edit">Edit</string>
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
@@ -49,7 +49,7 @@
     <string name="save_fragment_me_allergies">save_fragment_me_allergies</string>
     <string name="general">General</string>
     <string name="type">Type</string>
-    <string name="kcal_100">kCal (100)</string>
+    <string name="kcal_100">kCal (100g)</string>
     <string name="measurements">Measurements</string>
     <string name="measurements_done">Measurements done</string>
     <string name="max_glucose">Max. Glucose</string>
@@ -66,7 +66,6 @@
     <string name="of_which_sugars">of which sugars</string>
     <string name="salt">Salt</string>
 
-
     <string-array name="activity_add_food_spinner_type">
         <item>Grains</item>
         <item>Vegetables</item>
@@ -78,7 +77,7 @@
         <item>Drinks</item>
         <item>Snacks</item>
     </string-array>
-    <string-array name="fragment_me_spinner_gender">
+    <string-array name="fragment_me_spinner_sex">
         <item>Male</item>
         <item>Female</item>
     </string-array>
