--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,6 +97,17 @@
   <string name="time_ended">Time ended</string>
   <string name="delete_measurement">Delete Measurement</string>
   <string name="clear">Clear</string>
+  <string name="amount">Amount</string>
+  <string name="glucose_values">Glucose Values</string>
+  <string name="glucose_after">Glucose after…</string>
+  <string name="_15_minutes">… 15 minutes</string>
+  <string name="_30_minutes">… 30 minutes</string>
+  <string name="_45_minutes">… 45 minutes</string>
+  <string name="_60_minutes">… 60 minutes</string>
+  <string name="_75_minutes">… 75 minutes</string>
+  <string name="_90_minutes">… 90 minutes</string>
+  <string name="_105_minutes">… 105 minutes</string>
+  <string name="_120_minutes">… 120 minutes</string>
 
   <string-array name="type">
     <item>Grains</item>
