--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,6 +114,8 @@
   <string name="add_apple_debug">Add Apple (Debug)</string>
   <string name="delete_all_foods">Delete all foods</string>
   <string name="delete_food">Delete Food</string>
+  <string name="time_min">Time (min)</string>
+  <string name="glucose_mg_dl">Glucose (mg/dl)</string>
 
   <string-array name="type">
     <item>Grains</item>
