--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,6 +116,8 @@
   <string name="delete_food">Delete Food</string>
   <string name="time_min">Time (min)</string>
   <string name="glucose_mg_dl">Glucose (mg/dl)</string>
+  <string name="glucose_max_peak_mg_dl">Glucose max peak (mg/dl)</string>
+  <string name="glucose_average_mg_dl">Glucose average (mg/dl)</string>
 
   <string-array name="type">
     <item>Grains</item>
