Graph Food select implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,6 +119,7 @@
   <string name="glucose_max_peak_mg_dl">Glucose max peak (mg/dl)</string>
   <string name="glucose_average_mg_dl">Glucose average (mg/dl)</string>
   <string name="amount_measurements">Amount measurements</string>
+  <string name="choose_food">Choose Food</string>
 
   <string-array name="type">
     <item>Grains</item>
