--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,6 +140,7 @@
   <string name="compare_glucose_max">Compare Glucose Max</string>
   <string name="compare_glucose_average">Compare Glucose Average</string>
   <string name="compare_integral">Compare Integral</string>
+  <string name="animate_graph">Animate Graph</string>
 
   <string-array name="type">
     <item>Grains</item>
