Graphs single chart can now be animated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,6 +141,8 @@
   <string name="compare_glucose_average">Compare Glucose Average</string>
   <string name="compare_integral">Compare Integral</string>
   <string name="animate_graph">Animate Graph</string>
+  <string name="draw_bar_graph">Draw Bar Graph</string>
+  <string name="draw_line_graph">Draw Line Graph</string>
 
   <string-array name="type">
     <item>Grains</item>
