--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -159,6 +159,7 @@
   <string name="active_measurement">Active Measurement</string>
   <string name="select_food">Select food</string>
   <string name="update">Update</string>
+  <string name="update_active_measurement_values">Update active measurement values</string>
 
 
   <string-array name="type">
